--- a/LogFit/src/view/Cadastro.form
+++ b/LogFit/src/view/Cadastro.form
@@ -390,7 +390,7 @@
     <Component class="javax.swing.JLabel" name="lblLogo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/images/LogoLogFit.png"/>
+          <Image iconType="3" name="/images/logo.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -525,7 +525,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="0" y="0" width="980" height="640"/>
+          <AbsoluteConstraints x="0" y="0" width="970" height="640"/>
         </Constraint>
       </Constraints>
     </Component>
