--- a/LogFit/src/view/Login.form
+++ b/LogFit/src/view/Login.form
@@ -198,7 +198,7 @@
     <Component class="javax.swing.JLabel" name="lblLogo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/images/LogoLogFit.png"/>
+          <Image iconType="3" name="/images/logo.png"/>
         </Property>
       </Properties>
       <Constraints>
