--- a/LogFit/src/view/Home.form
+++ b/LogFit/src/view/Home.form
@@ -119,7 +119,7 @@
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/images/grafico.png"/>
+          <Image iconType="3" name="/images/nyan-cat-1.gif"/>
         </Property>
       </Properties>
       <Constraints>
